övrigt-kategorin klar

--- a/ovriga/badanka_magisk.html
+++ b/ovriga/badanka_magisk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badanka Brandman - Badande Badankor - Badankor för alla!</title>
+		<title>Badanka Magisk - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
@@ -90,7 +90,7 @@
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div>
+								<div class="produktbild_produktsida"><img src="../images/ovriga/magisk.jpg" alt="Lila glittrig badanka"></div>
 
 							</div>
 							<div class="produkt-info-right">
