--- a/ovriga/tshirt_cyklop.html
+++ b/ovriga/tshirt_cyklop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badanka Brandman - Badande Badankor - Badankor för alla!</title>
+		<title>T-shirt Cyklopanka - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
@@ -59,7 +59,7 @@
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
 					<li><a href="../badankor_ovriga.html">Badankor Övriga</a> <span> / </span></li>
-					<li><a href="#">T-shirt cyklop</a> <span> / </span></li>
+					<li><a href="#">T-shirt cyklopanka</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -85,7 +85,7 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>T-shirt cyklop</h1>
+				    <h1>T-shirt cyklopanka</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
