--- a/ovriga/badanka_strand.html
+++ b/ovriga/badanka_strand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badanka Brandman - Badande Badankor - Badankor för alla!</title>
+		<title>Badanka Strand - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
@@ -59,7 +59,7 @@
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
 					<li><a href="../badankor_ovriga.html">Badankor Övriga</a> <span> / </span></li>
-					<li><a href="#">Badanka Enorm</a> <span> / </span></li>
+					<li><a href="#">Badanka Strand</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -85,20 +85,20 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badanka Brandman</h1>
+				    <h1>Badanka Strand</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div>
+								<div class="produktbild_produktsida"><img src="../images/ovriga/strand.jpg" alt="Gul badanka med solglasögon och baddräkt"></div>
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår populära badanka med brandmanstema. Badankan mäter 8cm i diameter. </p>
+								 <p>Vår populära badanka med badstrandstema. Badankan mäter 8cm i diameter. </p>
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 137kr</span>
+									<span class="pris">Pris: 13kr</span>
 									<br>
 									<br>
 
