--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 			<main>
 				<div class="slidercontainer">
 				<div id="mySliderContainer">
-					<div class="mySlides"><a href="superhjaltar/batman.html"><img src="images/superhjaltar/batman-slide.jpg" alt="batman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/superman.html"><img src="images/superhjaltar/superman-slide.jpg" alt="superman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/superduck.html"><img src="images/superhjaltar/superduck-slide.jpg" alt="superduck"></a></div>
-					<div class="mySlides"><a href="superhjaltar/superwoman.html"><img src="images/superhjaltar/superwoman-slide.jpg" alt="superwoman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/wonderwoman.html"><img src="images/superhjaltar/wonderwoman-slide.jpg" alt="wonderwoman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/spiderman.html"><img src="images/superhjaltar/spiderman-slide.jpg" alt="spiderman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/badanka_batman.html"><img src="images/superhjaltar/batman-slide.jpg" alt="batman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/badankor_superman.html"><img src="images/superhjaltar/superman-slide.jpg" alt="superman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/badankor_superduck.html"><img src="images/superhjaltar/superduck-slide.jpg" alt="superduck"></a></div>
+					<div class="mySlides"><a href="superhjaltar/badankor_superwoman.html"><img src="images/superhjaltar/superwoman-slide.jpg" alt="superwoman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/badankor_wonderwoman.html"><img src="images/superhjaltar/wonderwoman-slide.jpg" alt="wonderwoman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/badankor_spindelmannen.html"><img src="images/superhjaltar/spiderman-slide.jpg" alt="spiderman"></a></div>
 					<div class="fl mySliderArrow mySliderArrowLeft" onclick="plusDivs(-1, 'r')">&#10094;</div>
 					<div class="fr mySliderArrow mySliderArrowRight" onclick="plusDivs(1, 'l')">&#10095;</div>
 					<h2 class="slidertext">Nya superhjälteankor ENDAST 29kr</h2>
@@ -102,13 +102,13 @@
 					<p>Här finner du våra populäraste badankor. Vi är säkra på att vi har både en och två badankor i din smak. För fler badankor använd sökfunktionen eller bläddra runt bland våra kategorier fyllda med ankor.</p>
 				</div>
 				<div class="flex-produkter">
-					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div></a>
-					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/munk.jpg" alt="Donut-badanka med rosa glasyr och strössel"></div><div class="namn"><span>Badanka Munk</span></div><div class="pris"><span>13kr</span></div></div></a>
-					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/systemvetare.jpg" alt="Badanka Systemvetare 1337 h4x0r"></div><div class="namn"><span>Badanka Systemvetare</span></div><div class="pris"><span>1337kr</span></div></div></a>
-					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/kapten.jpg" alt="Gul badanka med kaptenshatt och kavaj"></div><div class="namn"><span>Badanka Kapten</span></div><div class="pris"><span>13kr</span></div></div></a>
-					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/pirat.jpg" alt="Gul badanka Pirat med kniv och bandana"></div><div class="namn"><span>Badanka Pirat</span></div><div class="pris"><span>13kr</span></div></div></a>
-					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/systemvetare.jpg" alt="Badanka Systemvetare 1337 h4x0r"></div><div class="namn"><span>Badanka Systemvetare</span></div><div class="pris"><span>1337kr</span></div></div></a>
-					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/magisk.jpg" alt="Lila glittrig badanka"></div><div class="namn"><span>Badanka Magisk</span></div><div class="pris"><span>37kr</span></div></div></a>
+					<a href="yrken/badanka_brandman.html"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="ovriga/badanka_munk.html"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/munk.jpg" alt="Donut-badanka med rosa glasyr och strössel"></div><div class="namn"><span>Badanka Munk</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="yrken/badanka_systemvetare.html"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/systemvetare.jpg" alt="Badanka Systemvetare 1337 h4x0r"></div><div class="namn"><span>Badanka Systemvetare</span></div><div class="pris"><span>1337kr</span></div></div></a>
+					<a href="yrken/badanka_kapten.html"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/kapten.jpg" alt="Gul badanka med kaptenshatt och kavaj"></div><div class="namn"><span>Badanka Kapten</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="yrken/badanka_pirat.html"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/pirat.jpg" alt="Gul badanka Pirat med kniv och bandana"></div><div class="namn"><span>Badanka Pirat</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="ovriga/mugg_debugger.html"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/mugg_debugger.jpg" alt="Mugg med anka och text"></div><div class="namn"><span>Mugg Debugger</span></div><div class="pris"><span>199kr</span></div></div></a>
+					<a href="ovriga/tshirt_ankor.html"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/tshirt_manga_ankor.jpg" alt="Gul T-shirt full av ankor"></div><div class="namn"><span>T-shirt "for (;;) {Anka}"</span></div><div class="pris"><span>137kr</span></div></div></a>
 				</div>
 				</div>
 				<div class="clear"></div>
