--- a/ovriga/tshirt_ankor.html
+++ b/ovriga/tshirt_ankor.html
@@ -94,7 +94,7 @@
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår populära badanka med brandmanstema. Badankan mäter 8cm i diameter. </p>
+								 <p>T-shirt "for (;;) {Anka}". En populär T-shirt med oavbrutet många ankor på.</p>
 								 <br><br>
 
 								<form name="buy">
