--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -47,7 +47,7 @@
 					<li class="left"><a href="../index.html">HEM</a></li>
 					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
-					<li class="left"><a class="active" href="">ÖVRIGA</a></li>
+					<li class="left"><a class="active" href="badankor_ovriga.html">ÖVRIGA</a></li>
 				</ul>
 			</nav>
 			</form>
@@ -57,7 +57,8 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href=" ">Övriga Badankor</a> <span> / </span></li>
+					<li><a href="badankor_ovriga.html">Badankor Övriga</a> <span> / </span></li>
+					<li><a href="#">Badanka Keep Calm</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -77,7 +78,7 @@
 						<li class="left"><a href="../index.html">HEM</a></li>
 						<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 						<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
-						<li class="left"><a class="active" href="">ÖVRIGA</a></li>
+						<li class="left"><a class="active" href="badankor_ovriga.html">ÖVRIGA</a></li>
 					</ul>
 				</nav>
 
