--- a/ovriga/tshirt_ankor.html
+++ b/ovriga/tshirt_ankor.html
@@ -46,9 +46,9 @@
 				<ul class="topnav">
 					<li class="menu" onclick="topMenu()"><a href="#home">| | |</a></li>
 					<li class="left"><a href="../index.html">HEM</a></li>
-					<li class="left"><a href="badankor_yrken.html">YRKEN</a></li>
+					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
-					<li class="left"><a class="active" href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
+					<li class="left"><a class="active" href="badankor_ovriga.html">ÖVRIGA</a></li>
 				</ul>
 			</nav>
 			</form>
@@ -58,8 +58,8 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href="../badankor_ovriga.html">Badankor Övriga</a> <span> / </span></li>
-					<li><a href="#">T-shirt Oändligt många ankor</a> <span> / </span></li>
+					<li><a href="badankor_ovriga.html">Badankor Övriga</a> <span> / </span></li>
+					<li><a href="#">T-shirt Ankor</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -77,9 +77,9 @@
 				<nav id="left-nav" class="nomobile">
 					<ul class="topnav">
 						<li class="left"><a href="../index.html">HEM</a></li>
-						<li class="left"><a href="badankor_yrken.html">YRKEN</a></li>
+						<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 						<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
-						<li class="left"><a class="active" href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
+						<li class="left"><a class="active" href="badankor_ovriga.html">ÖVRIGA</a></li>
 					</ul>
 				</nav>
 
