--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -86,7 +86,7 @@
 				<main id="right-main">
 					<div class="text-produkter">
 				    <h1>Yrkesverksamma Badankor</h1>
-				    <p>Här hittar du badankor med yrkestema. Nedan listas våra badankor i arbetskläder.</p>
+				    <p>Här hittar du badankor med yrkestema. Nedan listas våra badankor i arbetskläder. Är du ute efter en perfekt present till läkarkollegan med nyrenoverat badrum eller din nyanställde kodapa så se hit!</p>
 				  </div>
 				    <div class="clear"></div>
 				  <div class="flex-produkter">
