--- a/ovriga/tshirt_ankor.html
+++ b/ovriga/tshirt_ankor.html
@@ -107,6 +107,7 @@
 									<option value="M">M</option>
 									<option value="L">L</option>
 									<option value="XL">XL</option>
+									</select>
 									<br>
 									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2" value="1">
 									<input type="submit" value="Lägg i kundvagn">
