--- a/superhjaltar/badanka_spindelmannen.html
+++ b/superhjaltar/badanka_spindelmannen.html
@@ -4,6 +4,8 @@
 		<title>Badanka Spindelmannen - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Spindelmannen: Flyter bra i badkaret för att vara en spindel. Pris: 37kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
@@ -97,7 +99,7 @@
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 137kr</span>
+									<span class="pris">Pris: 37kr</span>
 									<br>
 									<br>
 
