--- a/superhjaltar/badanka_superman.html
+++ b/superhjaltar/badanka_superman.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badanka Superduck - Badande Badankor - Badankor för alla!</title>
+		<title>Badanka Superman - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Superman: Kan flyga runt badkaret för extra badtid. Pris: 13kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
@@ -58,7 +60,7 @@
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
 					<li><a href="../badankor_heros.html">Badankor Superhjältar</a> <span> / </span></li>
-					<li><a href="#">Badanka Superduck</a> <span> / </span></li>
+					<li><a href="#">Badanka Superman</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -84,20 +86,20 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badanka Superduck</h1>
+				    <h1>Badanka Superman</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/superhjaltar/superduck.jpg" alt="badanka Superduck" height="300px width="300px></div>
+								<div class="produktbild_produktsida"><img src="../images/superhjaltar/superman.jpg" alt="badanka Superman"></div>
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår exklusiva Superduck badanka. Stirrig blick med anka på bröstet, cape och ögonbindel. Badankan mäter 8cm i diameter. </p>
+								 <p>Vår populära Superman badanka. Flott hår med ett S på magen. Badankan mäter 8cm i diameter. </p>
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 137kr</span>
+									<span class="pris">Pris: 13kr</span>
 									<br>
 									<br>
 
