--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -4,6 +4,8 @@
 		<title>Badankor Superhjältar - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankor med temat superhjältar så som badankan Spider-man och badankan Wonder Woman">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
@@ -89,11 +91,11 @@
 				    <div class="clear"></div>
 				  <div class="flex-produkter">
 				    <a href="badanka_batman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/batman.jpg" alt="Badanka Batman"></div><div class="namn"><span>Badanka Batman</span></div><div class="pris"><span>13kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/spiderman.jpg" alt="Badanka Spindelmannen"></div><div class="namn"><span>Badanka Spindelmannen</span></div><div class="pris"><span>37kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superwoman.jpg" alt="Badanka Superwoman"></div><div class="namn"><span>Badanka Superwoman</span></div><div class="pris"><span>37kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superman.jpg" alt="Badanka Superman"></div><div class="namn"><span>Badanka Superman</span></div><div class="pris"><span>13kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/wonderwoman.jpg" alt="Badanka Wonderwoman"></div><div class="namn"><span>Badanka Wonderwoman</span></div><div class="pris"><span>13kr</span></div></div></a>
-						<a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superduck.jpg" alt="Badanka Superhjälteanka"></div><div class="namn"><span>Badanka Superduck</span></div><div class="pris"><span>13kr</span></div></div></a>
+				    <a href="badanka_spindelmannen.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/spiderman.jpg" alt="Badanka Spindelmannen"></div><div class="namn"><span>Badanka Spindelmannen</span></div><div class="pris"><span>37kr</span></div></div></a>
+				    <a href="badanka_superwoman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superwoman.jpg" alt="Badanka Superwoman"></div><div class="namn"><span>Badanka Superwoman</span></div><div class="pris"><span>37kr</span></div></div></a>
+				    <a href="badanka_superman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superman.jpg" alt="Badanka Superman"></div><div class="namn"><span>Badanka Superman</span></div><div class="pris"><span>13kr</span></div></div></a>
+				    <a href="badanka_wonderwoman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/wonderwoman.jpg" alt="Badanka Wonderwoman"></div><div class="namn"><span>Badanka Wonderwoman</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="badanka_superduck.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superduck.jpg" alt="Badanka Superhjälteanka"></div><div class="namn"><span>Badanka Superduck</span></div><div class="pris"><span>13kr</span></div></div></a>
 				  </div>
 
 					<div class="clear"> </div>
