--- a/superhjaltar/badanka_batman.html
+++ b/superhjaltar/badanka_batman.html
@@ -4,6 +4,8 @@
 		<title>Badanka Batman - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Batman: Ikväll är det badkaret som kallar, inte Gotham. Pris: 13kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
@@ -97,7 +99,7 @@
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 7777kr</span>
+									<span class="pris">Pris: 13kr</span>
 									<br>
 									<br>
 
