--- a/superhjaltar/badanka_superwoman.html
+++ b/superhjaltar/badanka_superwoman.html
@@ -4,6 +4,8 @@
 		<title>Badanka Superwoman - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Superwoman: Det blir tryggt i badkaret med denna badanka. Pris: 13kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
@@ -89,7 +91,7 @@
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/superhjaltar/superwoman.jpg" alt="badanka Superwoman" height="300px width="300px></div>
+								<div class="produktbild_produktsida"><img src="../images/superhjaltar/superwoman.jpg" alt="badanka Superwoman"></div>
 
 							</div>
 							<div class="produkt-info-right">
@@ -97,7 +99,7 @@
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 137kr</span>
+									<span class="pris">Pris: 37kr</span>
 									<br>
 									<br>
 
