--- a/ovriga/badanka_magisk.html
+++ b/ovriga/badanka_magisk.html
@@ -104,6 +104,7 @@
 
 									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2" value="1">
 									<input type="submit" value="Lägg i kundvagn">
+									</form>
 							</div>
 						</div>
 
