--- a/ovriga/tshirt_keep_calm.html
+++ b/ovriga/tshirt_keep_calm.html
@@ -112,6 +112,7 @@
 									<br>
 									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2" value="1">
 									<input type="submit" value="Lägg i kundvagn">
+								</form>
 							</div>
 						</div>
 
