Fixa meta description

--- a/ovriga/badanka_enorm.html
+++ b/ovriga/badanka_enorm.html
@@ -4,8 +4,9 @@
 		<title>Badanka Enorm - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badanka Enorm: Om du inte har tid att bada så kan denna badanka sköta det åt dig. Pris: 299kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<meta name="description" content="">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
