--- a/ovriga/tshirt_cyklop.html
+++ b/ovriga/tshirt_cyklop.html
@@ -4,8 +4,9 @@
 		<title>T-shirt Cyklopanka - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="T-shirt Ankcyklop: Visa världen vad som betyder mest i livet. Pris: 137kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<meta name="description" content="">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
