--- a/superhjaltar/badanka_wonderwoman.html
+++ b/superhjaltar/badanka_wonderwoman.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="noindex, nofollow">
-		<meta name="description" content="Badankan Wonderwoman: Lite extra frihet i badkaret. Pris: 13kr">
+		<meta name="description" content="Badanka Wonderwoman: Lite extra frihet i badkaret. Pris: 13kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
