--- a/ovriga/badanka_munk.html
+++ b/ovriga/badanka_munk.html
@@ -4,8 +4,9 @@
 		<title>Badanka Munk - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badanka Munk: Glömde du äta innan du hoppa i badkaret? Inga problem, munken fixar det. Pris: 13kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<meta name="description" content="">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
