--- a/ovriga/badanka_trump.html
+++ b/ovriga/badanka_trump.html
@@ -4,8 +4,9 @@
 		<title>Badanka Trump - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badanka Trump: Ska man ner i badkaret så ska väl en man med en av värdlens viktigaste poster med. Pris: 13kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<meta name="description" content="">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
