--- a/ovriga/mugg_debugger.html
+++ b/ovriga/mugg_debugger.html
@@ -4,8 +4,9 @@
 		<title>Mugg Debuger - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Mugg Debugg: Underlättar felsökning av kod. Pris: 199kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<meta name="description" content="">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
