--- a/ovriga/tshirt_keep_calm.html
+++ b/ovriga/tshirt_keep_calm.html
@@ -4,8 +4,9 @@
 		<title>T-shirt Keep Calm - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="T-shirt Keep Calm Anka: Keep Calm and Have a Bath. Pris: 137kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<meta name="description" content="">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
