--- a/superhjaltar/badanka_spindelmannen.html
+++ b/superhjaltar/badanka_spindelmannen.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="noindex, nofollow">
-		<meta name="description" content="Badankan Spindelmannen: Flyter bra i badkaret för att vara en spindel. Pris: 37kr">
+		<meta name="description" content="Badanka Spindelmannen: Flyter bra i badkaret för att vara en spindel. Pris: 37kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
