--- a/yrken/badanka_pirat.html
+++ b/yrken/badanka_pirat.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="noindex, nofollow">
-		<meta name="description" content="Badankan Pirat: Passar utmärkt för den vågiga badkarsmiljön. Pris: 137kr">
+		<meta name="description" content="Badanka Pirat: Passar utmärkt för den vågiga badkarsmiljön. Pris: 137kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
