Meta för servicelänkarna

--- a/service/policy.html
+++ b/service/policy.html
@@ -4,6 +4,8 @@
 		<title>Sekretesspolicy - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badande badankor - Sekretesspolicy - Allt om hur vi sköter kund- och företagsuppgifter">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
