--- a/service/hjalp.html
+++ b/service/hjalp.html
@@ -4,6 +4,8 @@
 		<title>Hjälp - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badande badankor - Hjälp sida, populära frågor och svar om leverans, tillverkning och ångerrätt">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
