--- a/service/kontakt.html
+++ b/service/kontakt.html
@@ -4,6 +4,8 @@
 		<title>Kontakt - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badande badankor - Kontakta oss - telefonnummer, telefontid och e-post">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
