seo på badanka och badankor

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badande Badankor - Badankor för alla!</title>
+		<title>Badande Badankor - Din badanka på nätet!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="noindex, nofollow">
@@ -98,8 +98,8 @@
 				<br>
 				<div class="produkter">
 				<div class="text-produkter">
-					<h1>Badankor - Populära</h1>
-					<p>Här finner du våra populäraste badankor. Vi är säkra på att vi har både en och två badankor i din smak. För fler badankor använd sökfunktionen eller bläddra runt bland våra kategorier fyllda med ankor.</p>
+					<h1>Badankor - Hitta din badanka här</h1>
+					<p>Här finner du våra populäraste badankor. Vi är säkra på att vi har både en och två badankor i din smak. För fler badankor använd sökfunktionen eller bläddra runt bland våra kategorier fyllda med ankor. Vi är säkra på att vi har den badanka som du söker. Saknar du trots allt den du vill ha, tveka inte att kontakta oss. Hur du når oss hittar du längst ner på sidan.</p>
 				</div>
 				<div class="flex-produkter">
 					<a href="yrken/badanka_brandman.html"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div></a>
