lagt till lang=sv-se

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Badande Badankor - Din badanka på nätet!</title>
 		<meta charset="UTF-8">
