--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Badankor Övriga produkter - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
