--- a/service/kontakt.html
+++ b/service/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Kontakt - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
@@ -97,7 +97,7 @@
 <h3>E-post</h3>
 <p>info@badankor.nu</p>
 
-	
+
 </div>
 
 					<div class="clear"> </div>
