--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>404 - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
