--- a/ovriga/badanka_realistisk.html
+++ b/ovriga/badanka_realistisk.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Badanka Realistisk - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
