--- a/service/kundservice.html
+++ b/service/kundservice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Kundservice - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
@@ -40,7 +40,7 @@
 			</header>
 			<!-- SLUT header -->
 
-			
+
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
@@ -91,14 +91,14 @@
 <h2>Ring till kundservice</h2>
 <p>Om du vill nå oss på telefon ringer du till kundservice på 077-077077.</p>
 
-<p>Det är alltid kostnadsfritt att ringa till Badankor.nu kundservice, oavsett vart i världen du 
+<p>Det är alltid kostnadsfritt att ringa till Badankor.nu kundservice, oavsett vart i världen du
 befinner dig.</p>
 
 <h2>Öppettider telefon:</h2>
 <p>Måndag - Fredag: 09.00 - 11.30</p>
 
 <h2>Mejla till kundservice</h2>
-<p>Snabbast hjälp får du alltid om du kontaktar oss via telefon. Självklart hjälper vi dig även via 
+<p>Snabbast hjälp får du alltid om du kontaktar oss via telefon. Självklart hjälper vi dig även via
 mejl men det kan då ta ca 3-4 dagar innan du får svar. info@badankor.nu</p>
 </div>
 
