--- a/superhjaltar/badanka_superduck.html
+++ b/superhjaltar/badanka_superduck.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Badanka Superduck - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
