--- a/superhjaltar/badanka_superwoman.html
+++ b/superhjaltar/badanka_superwoman.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Badanka Superwoman - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
