--- a/yrken/badanka_systemvetare.html
+++ b/yrken/badanka_systemvetare.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-se">
 	<head>
 		<title>Badanka Systemvetare - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
