--- a/superhjaltar/badanka_batman.html
+++ b/superhjaltar/badanka_batman.html
@@ -47,7 +47,7 @@
 				<ul class="topnav">
 					<li class="menu" onclick="topMenu()"><a href="#home">| | |</a></li>
 					<li class="left"><a href="../index.html">HEM</a></li>
-					<li class="left"><a href="badankor_yrken.html">YRKEN</a></li>
+					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a class="active" href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 				</ul>
@@ -78,7 +78,7 @@
 				<nav id="left-nav" class="nomobile">
 					<ul class="topnav">
 						<li class="left"><a href="../index.html">HEM</a></li>
-						<li class="left"><a href="badankor_yrken.html">YRKEN</a></li>
+						<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 						<li class="left"><a class="active" href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 						<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 					</ul>
