--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<form onsubmit="return false">
 			<nav id="main-nav">
 				<ul class="topnav">
-					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
+					<li class="menu mobile" onclick="topMenu()"><a href="#home">MENY</a></li>
 					<li class="left"><a class="active" href=" ">HEM</a></li>
 					<li class="left"><a href="yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
