--- a/superhjaltar/badanka_superduck.html
+++ b/superhjaltar/badanka_superduck.html
@@ -59,7 +59,7 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href="../badankor_heros.html">Badankor Superhjältar</a> <span> / </span></li>
+					<li><a href="badankor_heros.html">Badankor Superhjältar</a> <span> / </span></li>
 					<li><a href="#">Badanka Superduck</a> <span> / </span></li>
 				</ul>
 			</nav>
