--- a/yrken/badanka_detektiv.html
+++ b/yrken/badanka_detektiv.html
@@ -59,7 +59,7 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href="../badankor_yrken.html">Badankor Yrkestema</a> <span> / </span></li>
+					<li><a href="badankor_yrken.html">Badankor Yrkestema</a> <span> / </span></li>
 					<li><a href="#">Badanka Detektiv</a> <span> / </span></li>
 				</ul>
 			</nav>
