--- a/service/policy.html
+++ b/service/policy.html
@@ -35,7 +35,7 @@
 				  </form>
 					</div>
 				</div>
-				<div id="head-kundvagn"><a class="active" href="../order/kundvagn.html" ><span id="kundvagn">19</span>&nbsp;</a></div>
+				<div id="head-kundvagn"><a href="../order/kundvagn.html" ><span id="kundvagn">0</span>&nbsp;</a></div>
 				<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
@@ -57,7 +57,7 @@
 
 			<nav id="bread-crumbs">
 				<ul>
-					<li><a href="../">Hem</a> <span> / </span> <a href=" ">Kundvagn</a> <span> / </span></li>
+					<li><a href="../index.html">Hem</a> <span> / </span> <a href=" ">Policy</a> <span> / </span></li>
 				</ul>
 			</nav>
 
