--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -59,7 +59,7 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href=" ">Superhjälteankor</a> <span> / </span></li>
+					<li><a href=" ">Badankor Superhjältar</a> <span> / </span></li>
 				</ul>
 			</nav>
 
