--- a/service/kontakt.html
+++ b/service/kontakt.html
@@ -92,10 +92,10 @@
 <p>Ni finner oss på besökadress Ankvägen 404, 404 04, Ankeborg.</p>
 <h3>Telefon</h3>
 <p>077-0770777</p>
-<p>Måndag - Fredag: 09.00 - 11.30</p>
+<p>Måndag - Fredag: 09.00 - 13.37</p>
 
 <h3>E-post</h3>
-<p>info@badankor.nu</p>
+<p><a href="mailto:info@badankor.nu">info@badankor.nu</a></p>
 
 
 </div>
