--- a/service/kundservice.html
+++ b/service/kundservice.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="noindex, nofollow">
-		<meta name="description" content="Badande badankor - Kundservice - Kontakta oss så kan vi hjälpa dig att få rätt anka i badkaret">
+		<meta name="description" content="Badande badankor - Kundservice - Kontakta oss så kan vi hjälpa dig att få rätt anka till badkaret">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
@@ -91,15 +91,15 @@
 <h2>Ring till kundservice</h2>
 <p>Om du vill nå oss på telefon ringer du till kundservice på 077-077077.</p>
 
-<p>Det är alltid kostnadsfritt att ringa till Badankor.nu kundservice, oavsett vart i världen du
+<p>Det är alltid kostnadsfritt att ringa till Badankor.nu kundservice, oavsett var i världen du
 befinner dig.</p>
 
 <h2>Öppettider telefon:</h2>
-<p>Måndag - Fredag: 09.00 - 11.30</p>
+<p>Måndag - Fredag: 09.00 - 13.37</p>
 
 <h2>Mejla till kundservice</h2>
 <p>Snabbast hjälp får du alltid om du kontaktar oss via telefon. Självklart hjälper vi dig även via
-mejl men det kan då ta ca 3-4 dagar innan du får svar. info@badankor.nu</p>
+mejl men det kan då ta ca 3-4 dagar innan du får svar. <a href="mailto:info@badankor.nu">info@badankor.nu</a></p>
 </div>
 
 					<div class="clear"> </div>
