--- a/service/kontakt.html
+++ b/service/kontakt.html
@@ -88,16 +88,40 @@
 
 <div id="service-div">
 
-<h2>Öppettider och kontaktinformation</h2>
-<p>Ni finner oss på besökadress Ankvägen 404, 404 04, Ankeborg.</p>
-<h3>Telefon</h3>
-<p>077-0770777</p>
-<p>Måndag - Fredag: 09.00 - 11.30</p>
+<img src="../images/kontaktaoss.jpg">
 
-<h3>E-post</h3>
-<p>info@badankor.nu</p>
+<div id="kontaktaoss">
+	<h2>Öppettider och kontaktinformation</h2>
+	<p>Ni finner oss på besökadress Ankvägen 404, 404 04, Ankeborg.</p>
 
+	<h3>Telefon</h3>
+	<p>077-0770777</p>
+	<p>Måndag - Fredag: 09.00 - 11.30</p>
 
+	<h3>E-post</h3>
+	<p>info@badankor.nu</p>
+</div>
+
+<div id="kontaktaoss-form">
+	<form action="kontakt.php" method="post">
+	<h2>Kontaktformulär</h2>
+	<p>Förnamn:</p>
+	<input type="text" name="fname">
+	<p>Efternamn:</p>
+	<input type="text" name="ename">
+	<p>Mobil:</p>
+	<input type="text" name="cell" style="width:120px">
+	<p><span>* </span>E-postadress:</p>
+	<input type="text" name="mail">
+	<p><span>* </span>Meddelande:</p>
+	<textarea></textarea>
+	<p><span>* </span> <em>Obligatorisk uppgift</em></p>
+
+	<div class="clear"></div>
+	<input type="submit" value="Skicka">
+	</form>
+</div>
+	
 </div>
 
 					<div class="clear"> </div>
