--- a/service/kontakt.html
+++ b/service/kontakt.html
@@ -99,7 +99,7 @@
 	<p>Måndag - Fredag: 09.00 - 11.30</p>
 
 	<h3>E-post</h3>
-	<p>info@badankor.nu</p>
+	<p><a href="mailto:info@badankor.nu">info@badankor.nu</a></p>
 </div>
 
 <div id="kontaktaoss-form">
