Kontakta oss röd

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="mySlides"><a href="superhjaltar/badanka_spindelmannen.html"><img src="images/superhjaltar/spiderman-slide.jpg" alt="spiderman"></a></div>
 					<div class="fl mySliderArrow mySliderArrowLeft" onclick="plusDivs(-1, 'r')">&#10094;</div>
 					<div class="fr mySliderArrow mySliderArrowRight" onclick="plusDivs(1, 'l')">&#10095;</div>
-					<h2 class="slidertext">Nya superhjälteankor ENDAST 29kr</h2>
+					<h2 class="slidertext">Nyhet: Superhjälteankor!</h2>
 				</div>
 
 				<div id="mySliderMenu">
