--- a/order/kundvagn.html
+++ b/order/kundvagn.html
@@ -224,7 +224,7 @@
 
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
-			<div style="margin-top: 100px;">
+			<div style="margin-top: 100px;" id="htmlcssvalid">
 				<p>
 				<a href="http://validator.w3.org/check?uri=referer"><img
 				src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
