--- a/service/hjalp.html
+++ b/service/hjalp.html
@@ -57,7 +57,7 @@
 
 			<nav id="bread-crumbs">
 				<ul>
-					<li><a href="../index.html">Hem</a> <span> / </span> <a href=" ">Hjalp</a> <span> / </span></li>
+					<li><a href="../index.html">Hem</a> <span> / </span> <a href=" ">Hjälp</a> <span> / </span></li>
 				</ul>
 			</nav>
 
