--- a/service/kundservice.html
+++ b/service/kundservice.html
@@ -45,7 +45,7 @@
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
 				<ul class="topnav">
-					<li class="menu" onclick="topMenu()"><a href="#">| | |</a></li>
+					<li class="menu" onclick="topMenu()"><a href="#">MENY</a></li>
 					<li class="left"><a href="../index.html">HEM</a></li>
 					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
