--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
 				<ul class="topnav">
-					<li class="menu" onclick="topMenu()"><a href="#">| | |</a></li>
+					<li class="menu" onclick="topMenu()"><a href="#">MENY</a></li>
 					<li class="left"><a class="active" href=" ">HEM</a></li>
 					<li class="left"><a href="yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
